--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-moralis": "^1.4.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.0",
     "wowjs": "^1.1.3"
