--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.1",
+    "@nomiclabs/hardhat-solhint": "^2.0.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts": "^4.7.3",
+    "@openzeppelin/hardhat-upgrades": "^1.21.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +16,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.0",
     "gsap": "^3.11.1",
+    "hardhat-gas-reporter": "^1.0.9",
     "jquery": "^3.6.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -17,6 +24,7 @@
     "react-moralis": "^1.4.2",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.0",
+    "solidity-coverage": "^0.8.2",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.0",
     "wowjs": "^1.1.3"
@@ -44,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "hardhat": "^2.12.0"
   }
 }
